# EBMC 5.7

* Verilog: `elsif preprocessor directive
* Verilog: fix for named generate blocks
* Verilog: $onehot and $onehot0 are now elaboration-time constant
* SystemVerilog: fix for #-# and #=# for empty matches
* SystemVerilog: fix for |-> and |=> for empty matches
* LTL/SVA to Buechi with --buechi
* SMV: abs, bool, count, max, min, toint, word1
* BMC: new encoding for F, avoiding spurious traces
* EBMC: verification results now have "result" verbosity level

# EBMC 5.6

* SystemVerilog: [*] and [+] SVA operators
* SystemVerilog: typedefs from package scopes
* SystemVerilog: assignment patterns with keys for structs
* SystemVerilog: unbased unsigned literals '0, '1, 'x, 'z
* SystemVerilog: first_match
* SystemVerilog: [->n] and [=n]
* SystemVerilog: within
* SystemVerilog: bugfix for |-> and |=>
* SystemVerilog: bugfix for SVA sequence and
* SystemVerilog: strong/weak sequence semantics
* Verilog: 'dx, 'dz
* SMV: LTL V operator, xnor operator
* SMV: word types and operators
* --smv-word-level outputs the model as word-level SMV

# EBMC 5.5

* If no engine is given, EBMC now selects an engine heuristically, instead
  of doing BMC with k=1
* Verilog: bugfix for $onehot0
* Verilog: fix for primitive gates with more than two inputs
* Verilog: Support $past when using AIG-based engines
* Verilog: fix for nor/nand/xnor primitive gates
* SystemVerilog: $bitstoreal/$bitstoshortreal, $realtobits/$shortrealtobits
* SystemVerilog: $itor, $rtoi
* SystemVerilog: chandle, event, string
* SystemVerilog: package scope operator
* SystemVerilog: checkers
* SystemVerilog: clocking block declarations

# EBMC 5.4

* BMC: Cadical support with --cadical
* BMC: iterative constraint strengthening is now default;
  use --bmc-with-assumptions to re-enable the previous algorithm.
* BMC: support SVA sequence intersect
* BMC: support SVA sequence throughout
* SystemVerilog: streaming concatenation {<<{...}} and {>>{...}}
* SystemVerilog: set membership operator