@@ -95,6 +95,7 @@ protected:
   bool vl2smv_extensions = false;
   bool warn_implicit_nets = false;
   bool ignore_initial = false;
+  bool initial_zero = false;
   std::list<std::string> include_paths;
   std::list<std::string> initial_defines;
   verilog_parse_treet parse_tree;
